# servemg

./: Cargo.toml  Dockerfile  README.md  docker-compose.example.yml
.github/workflows/: main.yml
src/: db.rs  main.rs  storage.rs
