[package]
name = "servemg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.37", features = ["full"] }
tower = "0.4"
sea-query = "0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres" ] }
aws-sdk-s3 = { version = "1.21", features = ["behavior-version-latest"]}
bytes = "1.6"
dotenvy = "0.15"
